--- a/o-nas.html
+++ b/o-nas.html
@@ -34,7 +34,7 @@
                 <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials__link">
                     <li class="c-socials__social"><i class="fab fa-instagram"></i></li>
                 </a>
-                <a href="eskulap.mosina@gmail.com" class="c-socials__link">
+                <a href="mailto:fotona4d@gmail.com.com" class="c-socials__link">
                     <li class="c-socials__social"><i class="fas fa-envelope"></i></li>
                 </a>
             </ul>
@@ -104,8 +104,12 @@
                 </li>
             </ul>
             <ul class="c-contact-ham">
-                <li class="c-contact-ham__item">+48 516 516 112</li>
-                <li class="c-contact-ham__item">fotona4d@gmail.com</li>
+                <a href="callto:+48 516 516 112">
+                    <li class="c-contact-ham__item">+48 516 516 112</li>
+                </a>
+                <a href="mailto:fotona4d@gmail.com">
+                    <li class="c-contact-ham__item">fotona4d@gmail.com</li>
+                </a>
             </ul>
         </div>
     </nav>
@@ -133,6 +137,37 @@
                     wzbogaconemu o koncentrat osocza bogatopłytkowego HD i ekstrakt komórek macierzystych. Oferujemy
                     Państwu dwa pakiety laserowego Endoliftingu Twarzy 4D – wyłącznie w połączeniu z iniekcjami osocza
                     lub komórek macierzystych.</p>
+            </div>
+
+            <div class="c-about">
+                <div class="c-about__img-wrapper">
+                    <div class="c-about__img-more">
+                        <h3 class="c-about__img-title">ORTOPEDIA</h3>
+                        <p class="c-about__img-desc">
+                            Centrum medycyny laserowej i regneracyjnej</p>
+                    </div>
+                </div>
+                <p class="c-about__text">Pacjenci, którzy dzwonią do naszej kliniki, szukają pomocy w ratowaniu swoich
+                    kolan czy bioder. Większość z nich posiada już podstawową wiedzę na temat osocza bogatopłytkowego.
+                    Jedni dowiedzieli się od swojego lekarza inni od dr Google. W pierwszych słowach swojej rozmowy
+                    proszą o zastrzyk z osocza lub pytają o cenę ostrzykiwania. Mało kto zdaje sobie sprawę, że samo
+                    osocze bogatopłytkowe odgrywa bardzo ważną rolę w procesie odbudowy i rehabilitacji stawu
+                    kolanowego, czy biodrowego ale tylko pod szczególnymi warunkami!.</p>
+            </div>
+
+            <div class="c-about">
+                <div class="c-about__img-wrapper">
+                    <div class="c-about__img-more">
+                        <h3 class="c-about__img-title">ENDOLIFTING</h3>
+                        <p class="c-about__img-desc">
+                            Centrum medycyny laserowej i regneracyjnej</p>
+                    </div>
+                </div>
+                <p class="c-about__text">Laserowy Endolifting Twarzy Fotona4D możemy podzielić ze względu na jego
+                    rozległość, konfigurację i rodzaj dodatkowych procedur wzmacniających efekt jego działania. Jednak w
+                    każdym z tych przypadków występują cztery innowacyjne procedury tworzące skuteczną terapię
+                    pozwalającą walczyć z upływającym czasem; EndoLifting – Smooth, Frace3D, Piano MatrixView,
+                    SupErfacialTM oraz dwie długości fali Fotona: Er:YAG i Nd: YAG.</p>
             </div>
 
             <h2 class="hours-subtitle">GODZINY OTWARCIA</h2>
@@ -193,12 +228,16 @@
             <li class="c-nav-adress__item"><i class="fas fa-map-marker-alt c-nav-adress__icon"></i>62-050 Mosina ul.
                 Wawrzyniaka 13
             </li>
-            <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
-                +48 516 516 112
-            </li>
-            <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
-                fotona4d@gmail.com
-            </li>
+            <a href="tel:+48 516 516 112">
+                <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
+                    +48 516 516 112
+                </li>
+            </a>
+            <a href="mailto:fotona4d@gmail.com">
+                <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
+                    fotona4d@gmail.com
+                </li>
+            </a>
         </ul>
         <ul class="c-socials-nav">
             <a href="https://www.facebook.com/eskulap.mosina" class="c-socials-nav__link">
@@ -207,7 +246,7 @@
             <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials-nav__link">
                 <li class="c-socials-nav__social"><i class="fab fa-instagram c-socials-nav__icon"></i></li>
             </a>
-            <a href="eskulap.mosina@gmail.com" class="c-socials-nav__link">
+            <a href="mailto:fotona4d@gmail.com" class="c-socials-nav__link">
                 <li class="c-socials-nav__social"><i class="fas fa-envelope c-socials-nav__icon"></i></li>
             </a>
         </ul>
