--- a/zabiegi.html
+++ b/zabiegi.html
@@ -35,7 +35,7 @@
                 <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials__link">
                     <li class="c-socials__social"><i class="fab fa-instagram"></i></li>
                 </a>
-                <a href="eskulap.mosina@gmail.com" class="c-socials__link">
+                <a href="mailto:fotona4d@gmail.com.com" class="c-socials__link">
                     <li class="c-socials__social"><i class="fas fa-envelope"></i></li>
                 </a>
             </ul>
@@ -105,8 +105,12 @@
                 </li>
             </ul>
             <ul class="c-contact-ham">
-                <li class="c-contact-ham__item">+48 516 516 112</li>
-                <li class="c-contact-ham__item">fotona4d@gmail.com</li>
+                <a href="callto:+48 516 516 112">
+                    <li class="c-contact-ham__item">+48 516 516 112</li>
+                </a>
+                <a href="mailto:fotona4d@gmail.com">
+                    <li class="c-contact-ham__item">fotona4d@gmail.com</li>
+                </a>
             </ul>
         </div>
     </nav>
@@ -117,7 +121,8 @@
             <div class="c-header-section">
                 <h1 class="c-header-section__title">ZABIEGI</h1>
             </div>
-            <h2 class="section-subtitle">ZABIEGI LASEROWE</h2>
+
+            <h2 class="section-subtitle">BIOORTOPEDIA</h2>
             <div class="c-cards">
                 <div class="c-cards__card">
                     <div class="c-cards__more">
@@ -149,7 +154,7 @@
                 </div>
             </div>
 
-            <h2 class="section-subtitle">BIOORTOPEDIA</h2>
+            <h2 class="section-subtitle">ZABIEGI LASEROWE</h2>
             <div class="c-cards">
                 <div class="c-cards__card">
                     <div class="c-cards__more">
@@ -214,12 +219,16 @@
             <li class="c-nav-adress__item"><i class="fas fa-map-marker-alt c-nav-adress__icon"></i>62-050 Mosina ul.
                 Wawrzyniaka 13
             </li>
-            <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
-                +48 516 516 112
-            </li>
-            <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
-                fotona4d@gmail.com
-            </li>
+            <a href="tel:+48 516 516 112">
+                <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
+                    +48 516 516 112
+                </li>
+            </a>
+            <a href="mailto:fotona4d@gmail.com">
+                <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
+                    fotona4d@gmail.com
+                </li>
+            </a>
         </ul>
         <ul class="c-socials-nav">
             <a href="https://www.facebook.com/eskulap.mosina" class="c-socials-nav__link">
@@ -228,7 +237,7 @@
             <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials-nav__link">
                 <li class="c-socials-nav__social"><i class="fab fa-instagram c-socials-nav__icon"></i></li>
             </a>
-            <a href="eskulap.mosina@gmail.com" class="c-socials-nav__link">
+            <a href="mailto:fotona4d@gmail.com" class="c-socials-nav__link">
                 <li class="c-socials-nav__social"><i class="fas fa-envelope c-socials-nav__icon"></i></li>
             </a>
         </ul>
