--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
                 <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials__link">
                     <li class="c-socials__social"><i class="fab fa-instagram"></i></li>
                 </a>
-                <a href="eskulap.mosina@gmail.com" class="c-socials__link">
+                <a href="mailto:fotona4d@gmail.com.com" class="c-socials__link">
                     <li class="c-socials__social"><i class="fas fa-envelope"></i></li>
                 </a>
             </ul>
@@ -105,8 +105,12 @@
                 </li>
             </ul>
             <ul class="c-contact-ham">
-                <li class="c-contact-ham__item">+48 516 516 112</li>
-                <li class="c-contact-ham__item">fotona4d@gmail.com</li>
+                <a href="callto:+48 516 516 112">
+                    <li class="c-contact-ham__item">+48 516 516 112</li>
+                </a>
+                <a href="mailto:fotona4d@gmail.com">
+                    <li class="c-contact-ham__item">fotona4d@gmail.com</li>
+                </a>
             </ul>
         </div>
     </nav>
@@ -118,14 +122,21 @@
                 <h1 class="c-header-section__title">KONTAKT</h1>
             </div>
             <div class="l-contact">
+
                 <div class="c-contact">
-                    <p class="c-contact__call">Zadzwoń</p>
-                    <p class="c-contact__number">+48 516 516 112</p>
+                    <a href="tel:+48 516 516 112">
+                        <p class="c-contact__call">Zadzwoń</p>
+                        <p class="c-contact__number">+48 516 516 112</p>
+                    </a>
                 </div>
+
                 <div class="c-contact">
-                    <p class="c-contact__write">Napisz</p>
-                    <p class="c-contact__email">fotona4d@gmail.com</p>
+                    <a href="mailto:fotona4d@gmail.com">
+                        <p class="c-contact__write">Napisz</p>
+                        <p class="c-contact__email">fotona4d@gmail.com</p>
+                    </a>
                 </div>
+
                 <div class="c-contact">
                     <p class="c-contact__visit">Odwiedź nas</p>
                     <p class="c-contact__place">Mosina, ul Wawrzyniaka 13</p>
@@ -194,12 +205,16 @@
             <li class="c-nav-adress__item"><i class="fas fa-map-marker-alt c-nav-adress__icon"></i>62-050 Mosina ul.
                 Wawrzyniaka 13
             </li>
-            <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
-                +48 516 516 112
-            </li>
-            <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
-                fotona4d@gmail.com
-            </li>
+            <a href="tel:+48 516 516 112">
+                <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
+                    +48 516 516 112
+                </li>
+            </a>
+            <a href="mailto:fotona4d@gmail.com">
+                <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
+                    fotona4d@gmail.com
+                </li>
+            </a>
         </ul>
         <ul class="c-socials-nav">
             <a href="https://www.facebook.com/eskulap.mosina" class="c-socials-nav__link">
@@ -208,7 +223,7 @@
             <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials-nav__link">
                 <li class="c-socials-nav__social"><i class="fab fa-instagram c-socials-nav__icon"></i></li>
             </a>
-            <a href="eskulap.mosina@gmail.com" class="c-socials-nav__link">
+            <a href="mailto:fotona4d@gmail.com" class="c-socials-nav__link">
                 <li class="c-socials-nav__social"><i class="fas fa-envelope c-socials-nav__icon"></i></li>
             </a>
         </ul>
