slayder opinie i nowe logo

--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/131d487908.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="//ciasteczka.eu/cookiesEU-latest.min.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            jQuery.fn.cookiesEU();
+        });
+    </script>
 </head>
 
 <body>
@@ -85,22 +92,27 @@
 
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        ENDOLIFTING
+                        ORTOPEDIA
                     </a>
                 </li>
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        KOMÓRKI MACIERZYSTE
+                        ELIMINACJA BÓLU
                     </a>
                 </li>
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        FIBRYNA
+                        LECZENIE STAWÓW
                     </a>
                 </li>
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        OSOCZE BOGATOPŁYKOWE
+                        LECZENIE ZWYRODNIEŃ
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        LECZENIE URAZÓW
                     </a>
                 </li>
             </ul>
@@ -164,7 +176,7 @@
         </div>
         <div class="c-map" style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no"
                 marginheight="0" marginwidth="0"
-                src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Mosina,%20wawrzyniaka%2013+(Medicalaser)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Mosina,%20wawrzyniaka%2013+(Medicalaser)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
         </div>
         </section>
     </main>
