--- a/polityka.html
+++ b/polityka.html
@@ -10,6 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/131d487908.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="//ciasteczka.eu/cookiesEU-latest.min.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            jQuery.fn.cookiesEU();
+        });
+    </script>
 </head>
 
 <body>
@@ -84,22 +91,27 @@
 
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        ENDOLIFTING
+                        ORTOPEDIA
                     </a>
                 </li>
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        KOMÓRKI MACIERZYSTE
+                        ELIMINACJA BÓLU
                     </a>
                 </li>
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        FIBRYNA
+                        LECZENIE STAWÓW
                     </a>
                 </li>
                 <li class="c-most-popular__item">
                     <a href="" class="c-most-popular__link">
-                        OSOCZE BOGATOPŁYKOWE
+                        LECZENIE ZWYRODNIEŃ
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        LECZENIE URAZÓW
                     </a>
                 </li>
             </ul>
