nowe logo, btn w headerze

--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
                 <div class="c-header-section swiper-slide">
                     <h1 class="c-header-section__title">ORTOPEDIA
                     </h1>
+                    <div class="c-header-section__wrapper-btn">
+                        <p class="c-header-section__description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro at magni tempora quibusdam,
+                            repudiandae veritatis esse beatae sunt distinctio quaerat.
+                        </p>
+                        <a href="zabiegi.html" class="c-header-section__btn btn">Czytaj więcej</a>
+                    </div>
                     <ul class="c-header-list">
                         <a href="" class="c-header-list__link">
                             <li class="c-header-list__item">Stawy</li>
@@ -195,6 +202,13 @@ assets/header-bg1_e89kur_c_scale,w_1203.png 1203w" src="header-bg1_e89kur_c_scal
                 <div class="c-header-section c-header-section--second swiper-slide">
                     <h1 class="c-header-section__title">LASEROTERAPIA
                     </h1>
+                    <div class="c-header-section__wrapper-btn">
+                        <p class="c-header-section__description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro at magni tempora quibusdam,
+                            repudiandae veritatis esse beatae sunt distinctio quaerat.
+                        </p>
+                        <a href="zabiegi.html" class="c-header-section__btn btn">Czytaj więcej</a>
+                    </div>
                     <ul class="c-header-list">
                         <a href="" class="c-header-list__link">
                             <li class="c-header-list__item">Redukcja przebarwień</li>
@@ -235,6 +249,13 @@ assets/pexels-photo-1036623_kebkpg_c_scale,w_768.png 768w" src="pexels-photo-103
                 <div class="c-header-section c-header-section--third swiper-slide">
                     <h1 class="c-header-section__title">PIELĘGNACJA SKÓRY
                     </h1>
+                    <div class="c-header-section__wrapper-btn">
+                        <p class="c-header-section__description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro at magni tempora quibusdam,
+                            repudiandae veritatis esse beatae sunt distinctio quaerat.
+                        </p>
+                        <a href="zabiegi.html" class="c-header-section__btn btn">Czytaj więcej</a>
+                    </div>
                     <ul class="c-header-list">
                         <a href="" class="c-header-list__link">
                             <li class="c-header-list__item">Twarz</li>
