--- a/polityka.html
+++ b/polityka.html
@@ -128,7 +128,7 @@
     <main class="l-main">
         <section class="cookies">
             <div class="c-header-section">
-                <h1 class="c-header-section__title">POLITYKA PRYWATNOŚCI</h1>
+                <h1 class="c-header-section__title c-header-section__title--cookies">POLITYKA PRYWATNOŚCI</h1>
             </div>
 
             <ul class="c-cookies">
